Output/run_20260701_163355/fake_attn_fwd_overflow.ttadapter/oracle.stderr.txt
/Users/YokeLove/huawei/AscendNPU-IR/data/fake_attn_fwd_overflow.ttadapter:2:3: error: ub overflow, requires 2097152 bits while 1572864 bits available! (possible reason: tiling basic block is too large or block number is more than what user expect due to multi-buffer feature is enabled and some ops need extra local buffer.)
  func.func @_attn_fwd(
  ^
/Users/YokeLove/huawei/AscendNPU-IR/data/fake_attn_fwd_overflow.ttadapter:2:3: note: see current operation: 
"func.func"() <{function_type = (memref<65536xf16, #hivm.address_space<gm>>, memref<65536xf16, #hivm.address_space<gm>>, memref<65536xf16, #hivm.address_space<gm>>, i32, i32, i32, i32, i32, i32) -> (), sym_name = "_attn_fwd"}> ({
^bb0(%arg0: memref<65536xf16, #hivm.address_space<gm>>, %arg1: memref<65536xf16, #hivm.address_space<gm>>, %arg2: memref<65536xf16, #hivm.address_space<gm>>, %arg3: i32, %arg4: i32, %arg5: i32, %arg6: i32, %arg7: i32, %arg8: i32):
  %0 = "memref.alloc"() <{operandSegmentSizes = array<i32: 0, 0>}> : () -> memref<65536xf16, #hivm.address_space<ub>>
  %1 = "memref.alloc"() <{operandSegmentSizes = array<i32: 0, 0>}> : () -> memref<65536xf16, #hivm.address_space<ub>>
  %2 = "memref.alloc"() <{operandSegmentSizes = array<i32: 0, 0>}> : () -> memref<65536xf16, #hivm.address_space<ub>>
  "hivm.hir.load"(%arg0, %0) <{operandSegmentSizes = array<i32: 1, 1, 0, 0, 0, 0>}> : (memref<65536xf16, #hivm.address_space<gm>>, memref<65536xf16, #hivm.address_space<ub>>) -> ()
  "hivm.hir.load"(%arg1, %1) <{operandSegmentSizes = array<i32: 1, 1, 0, 0, 0, 0>}> : (memref<65536xf16, #hivm.address_space<gm>>, memref<65536xf16, #hivm.address_space<ub>>) -> ()
  "hivm.hir.vadd"(%0, %1, %2) <{broadcast = array<i64>, operandSegmentSizes = array<i32: 2, 1, 0>, transpose = array<i64>}> : (memref<65536xf16, #hivm.address_space<ub>>, memref<65536xf16, #hivm.address_space<ub>>, memref<65536xf16, #hivm.address_space<ub>>) -> ()
  "hivm.hir.store"(%2, %arg2) : (memref<65536xf16, #hivm.address_space<ub>>, memref<65536xf16, #hivm.address_space<gm>>) -> ()
  "func.return"() : () -> ()
}) {hacc.entry, hacc.function_kind = #hacc.function_kind<DEVICE>, hivm.func_core_type = #hivm.func_core_type<AIV>} : () -> ()
